DTSCC-3095: Java/Spring upgrade